fixed footer wrapping

--- a/_sass/jekyll-theme-haymarket.scss
+++ b/_sass/jekyll-theme-haymarket.scss
@@ -327,7 +327,7 @@ a {
 
   @include small {
     float: none;
-    max-width: 75%;
+    max-width: 100%;
     padding-bottom: 1.5rem;
   }
 }
